--- a/final2.css
+++ b/final2.css
@@ -1,5 +1,5 @@
 * {
-    /* border: 1px solid red; */
+    border: 1px solid red;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
     
