--- a/final2.css
+++ b/final2.css
@@ -2,7 +2,7 @@
     border: 1px solid red;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    
+    background-color: green;
 }
 
 body {
