--- a/final2.css
+++ b/final2.css
@@ -1,8 +1,8 @@
 * {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: green;
+   
 }
 
 body {
