--- a/final2.css
+++ b/final2.css
@@ -24,16 +24,17 @@ p {
     overflow: hidden;
     position: relative;
     margin-top: -10px;
+   
 }
 
 /* HEADER ANIMATION */
 .rubrik:after {
-    margin-top: 53px;
+    margin-top: 68px;
     content: '';
     top: 0;
     transform: translateX(100%);
     width: 100%;
-    height: 78px;
+    height: 80px;
     position: absolute;
     z-index: 1;
     animation: slide 10s infinite;
@@ -55,12 +56,14 @@ p {
 
 /* SHINE-effekt */
 .logga {
+    transform: scale(130%);
     -webkit-mask-image: linear-gradient(45deg, #000 25%, rgba(0, 0, 0, .2) 50%, #000 75%);
     mask-image: linear-gradient(45deg, #000 25%, rgba(0, 0, 0, .2) 50%, #000 75%);
     -webkit-mask-size: 800%;
     mask-size: 800%;
     -webkit-mask-position: 0;
     mask-position: 0;
+    
   
   
 }
@@ -81,6 +84,7 @@ p {
     margin-left: auto;
     justify-content: space-between;
     letter-spacing: 12px;
+   margin-top: 20px;
     
 }
 
@@ -321,6 +325,6 @@ p {
     position: absolute;
     height: 55%;
     left: 20px;
-    opacity: 0.;
+   
     
 }
