--- a/final2.css
+++ b/final2.css
@@ -172,11 +172,12 @@ p {
     align-self: center;
     margin: 20px;
     display: -webkit-box;
-    -webkit-line-clamp: 4;
+    -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
     overflow: hidden;
     opacity: 0;
     transition: 3s ease-in-out;
+    align-self: flex-end;
 }
 
 
