--- a/final2.css
+++ b/final2.css
@@ -123,6 +123,7 @@ body {
     display: flex;
     height: 300px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .post-border {
@@ -515,3 +516,117 @@ h3 {
         width: 80%;
     }
 }
+
+
+
+
+/* RESPONSIVE DESIGN inlägg */
+
+        /* RESPONSIVE DESIGN */
+
+        /* TABLET */
+        @media screen and (min-width: 500px) and (max-width:1150px) {
+            .wrap {
+                flex-direction: column;
+            }
+
+            .post-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                overflow: hidden;
+            }
+
+            .top,
+            .middle,
+            .bottom {
+                font-size: medium;
+                width: 90%;
+            }
+
+            .Social {
+                width: 150px;
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: space-around;
+            }
+
+            .old-post-container {
+                margin-top: 10px;
+                margin-left: 0px;
+                margin-right: 10px;
+            }
+
+            .old-post-container:hover {
+                margin-top: 10px;
+                margin-left: 0px;
+            }
+        }
+
+        /* MOBILVERSION */
+        @media screen and (max-width: 500px) {
+
+            .wrap {
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .post-container {
+                flex-direction: column;
+                padding: 5px;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .rubrik {
+                flex-direction: column;
+                align-content: center;
+            }
+
+            .post:hover .image-post {
+                height: 100px;
+            }
+
+            .top,
+            .middle,
+            .bottom {
+                font-size: medium;
+                width: 95%;
+                margin: 20px;
+            }
+
+            .bottom-pic {
+                max-width: none;
+            }
+
+            .Social {
+                margin-top: 30px;
+                margin-right: auto;
+            }
+
+            .rubrik:after {
+                height: 80px;
+            }
+
+            .old-post-container {
+                width: 100%;
+                margin: 0px;
+            }
+
+            .old-post-container:hover {
+                margin: 0px;
+            }
+
+            .old-post-top:hover h3 {
+                transform: none;
+            }
+
+            .searchbar {
+                width: 80%;
+                height: 40px;
+            }
+
+            .old-post-container:hover .searchbar {
+                width: 80%;
+            }
+        }
